Implémentation du fonctionnel et du style

--- a/src/app/scss/layout.module.scss
+++ b/src/app/scss/layout.module.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500;600;700&display=swap');
 
-body{
+.body{
     font-family: 'Be Vietnam Pro', sans-serif;
-    color: #ffffff
+    color: #E2E4F3;
 }
 
 .background{
