--- a/src/components/quiz/quiz.module.scss
+++ b/src/components/quiz/quiz.module.scss
@@ -1,5 +1,73 @@
+.header{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.title{
+    align-self: center;
+}
+
+.score{
+    padding:  5px 10px;
+    background: linear-gradient(#E65895, #BC6BE8);
+    border-radius: 20px;
+    font-size: small;
+}
+
 .card {
-    background-color: #393F6E;
+    background-color: #343964;
     border-radius: 10px;
-    padding: 2rem;
+    max-width: 800px;
+    width: 100%;
+    padding: 50px;
+    box-sizing: border-box;
+}
+
+.buttonList{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 30px;
+}
+
+.button {
+    width: 3em;
+    height: 3em;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    color: #E2E4F3;
+    background-color: #393F6E;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    &:hover{
+        background: linear-gradient(#E65895, #BC6BE8);
+        transform: scale(1.05);
+        opacity: 0.95;
+    }
+}
+
+.active{
+    background: linear-gradient(#E65895, #BC6BE8);
+}
+
+.replayButton{
+        font-family: 'Be Vietnam Pro', sans-serif;
+        color: #E2E4F3;
+        background-color: #393F6E;
+        border: none;
+        border-radius: 12px;
+        min-width: 240px;
+        min-height: 55px;
+        width: 100%;
+        text-align: center;
+        padding: 12px 16px;
+        box-sizing: border-box; 
+        transition: all 0.3s ease;
+        &:hover:enabled{
+            cursor: pointer;
+            background: linear-gradient(#E65895, #BC6BE8);
+            transform: scale(1.05);
+            opacity: 0.95;
+        }
 }
