--- a/src/app/css-compiled/quiz/quiz.module.css
+++ b/src/app/css-compiled/quiz/quiz.module.css
@@ -72,4 +72,30 @@
   opacity: 0.95;
 }
 
+.buttonNext {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  font-family: "Be Vietnam Pro", sans-serif;
+  color: #E2E4F3;
+  background-color: #393F6E;
+  border: none;
+  border-radius: 12px;
+  min-width: 240px;
+  min-height: 55px;
+  width: 100%;
+  text-align: center;
+  padding: 12px 16px;
+  margin-top: 10px;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+}
+.buttonNext:hover:enabled {
+  cursor: pointer;
+  background: linear-gradient(#E65895, #BC6BE8);
+  transform: scale(1.05);
+  opacity: 0.95;
+}
+
 /*# sourceMappingURL=quiz.module.css.map */
