--- a/src/components/quiz/quiz.module.scss
+++ b/src/components/quiz/quiz.module.scss
@@ -71,3 +71,29 @@
             opacity: 0.95;
         }
 }
+
+.buttonNext {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    color: #E2E4F3;
+    background-color: #393F6E;
+    border: none;
+    border-radius: 12px;
+    min-width: 240px;
+    min-height: 55px;
+    width: 100%;
+    text-align: center;
+    padding: 12px 16px;
+    margin-top: 10px;
+    box-sizing: border-box; 
+    transition: all 0.3s ease;
+    &:hover:enabled{
+        cursor: pointer;
+        background: linear-gradient(#E65895, #BC6BE8);
+        transform: scale(1.05);
+        opacity: 0.95;
+    }
+}
